--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -30,7 +30,7 @@
 .pri img {
   width: 50px;
   height: 50px;
-  border-radius: 50%;
+  border-radius: 7px;
   object-fit: cover;
   border: 2px solid rgba(255, 255, 255, 0.3);
 }
